crates/rome_formatter/tests/specs/prettier/js/do/do.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: do.js

---
# Input
```js
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
      else if(env === 'development') 'http://localhost:4000';
    }
};

let x = do {
  let tmp = f();
  tmp * tmp + 1
};

let y = do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(do {});
(do {} + 1);
(1 + do {});
() => do {};

(do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

```

# Output
```js
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
else
if (env === "development") {
  "http://localhost:4000";
}
}
}

let x =
do {
  let tmp = f();
  tmp * tmp + 1
};

let y =
do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(
do {});
(
do {} + 1);
(1 +
do {});
() =>
do {};

(
do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() =>
do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

```

# Errors
```
error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
  ┌─ do.js:3:5
  │
3 │     do {
  │     ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `:` but instead found `{`
  ┌─ do.js:3:8
  │
3 │     do {
  │        ^ unexpected

error[SyntaxError]: expected `,` but instead found `===`
  ┌─ do.js:4:14
  │
4 │       if(env === 'production') 'https://abc.mno.com/';
  │              ^^^ unexpected

error[SyntaxError]: expected a function body but instead found ''https://abc.mno.com/''
  ┌─ do.js:4:32
  │
4 │       if(env === 'production') 'https://abc.mno.com/';
  │                                ^^^^^^^^^^^^^^^^^^^^^^ Expected a function body here

error[SyntaxError]: expected `:` but instead found `;`
  ┌─ do.js:4:54
  │
4 │       if(env === 'production') 'https://abc.mno.com/';
  │                                                      ^ unexpected

error[SyntaxError]: expected a statement but instead found 'else'
  ┌─ do.js:5:7
  │
5 │       else if(env === 'development') 'http://localhost:4000';
  │       ^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '}
}'
  ┌─ do.js:6:5
  │  
6 │ ┌     }
7 │ │ };
  │ └─^ Expected a statement here

error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
  ┌─ do.js:9:9
  │
9 │ let x = do {
  │         ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `WHILE_KW` but instead found `;`
   ┌─ do.js:12:2
   │
12 │ };
   │  ^ unexpected

error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
   ┌─ do.js:14:9
   │
14 │ let y = do {
   │         ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `WHILE_KW` but instead found `;`
   ┌─ do.js:18:2
   │
18 │ };
   │  ^ unexpected

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ do.js:22:5
   │  
22 │ ┌     <nav>
23 │ │       <Home />
   │ └───────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ do.js:23:14
   │
23 │       <Home />
   │             -^ But this operator was encountered instead
   │             │ 
   │             This operator requires a right hand side value

error[SyntaxError]: expected `:` but instead found `{`
   ┌─ do.js:25:12
   │
25 │         do {
   │            ^ unexpected

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ do.js:27:13
   │
27 │             <LogoutButton />
   │             ^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ do.js:27:28
   │
27 │             <LogoutButton />
   │                           -^ But this operator was encountered instead
   │                           │ 
   │                           This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found '}'
   ┌─ do.js:28:11
   │
28 │           } else {
   │           ^ Expected an expression here

error[SyntaxError]: expected `,` but instead found `else`
   ┌─ do.js:28:13
   │
28 │           } else {
   │             ^^^^ unexpected

error[SyntaxError]: expected `:` but instead found `{`
   ┌─ do.js:28:18
   │
28 │           } else {
   │                  ^ unexpected

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '<'
   ┌─ do.js:29:13
   │
29 │             <LoginButton />
   │             ^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected a parenthesis '(' but instead found '}'
   ┌─ do.js:30:11
   │
30 │           }
   │           ^ Expected a parenthesis '(' here

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ do.js:33:6
   │
33 │     </nav>
   │     -^ But this operator was encountered instead
   │     │ 
   │     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ do.js:34:3
   │
34 │   );
   │   ^ Expected an expression here

error[SyntaxError]: expected `')'` but instead found `do`
   ┌─ do.js:37:2
   │
37 │ (do {});
   │  ^^ unexpected

error[SyntaxError]: expected `WHILE_KW` but instead found `)`
   ┌─ do.js:37:7
   │
37 │ (do {});
   │       ^ unexpected

error[SyntaxError]: expected `')'` but instead found `do`
   ┌─ do.js:38:2
   │
38 │ (do {} + 1);
   │  ^^ unexpected

error[SyntaxError]: expected `WHILE_KW` but instead found `+`
   ┌─ do.js:38:8
   │
38 │ (do {} + 1);
   │        ^ unexpected

error[SyntaxError]: expected an expression but instead found 'do'
   ┌─ do.js:39:6
   │
39 │ (1 + do {});
   │      ^^ Expected an expression here

error[SyntaxError]: expected `WHILE_KW` but instead found `)`
   ┌─ do.js:39:11
   │
39 │ (1 + do {});
   │           ^ unexpected

error[SyntaxError]: expected a function body, or an expression but instead found 'do'
   ┌─ do.js:40:7
   │
40 │ () => do {};
   │       ^^ Expected a function body, or an expression here

error[SyntaxError]: expected `WHILE_KW` but instead found `;`
   ┌─ do.js:40:12
   │
40 │ () => do {};
   │            ^ unexpected

error[SyntaxError]: expected `')'` but instead found `do`
   ┌─ do.js:42:2
   │
42 │ (do {
   │  ^^ unexpected

error[SyntaxError]: expected `WHILE_KW` but instead found `)`
   ┌─ do.js:47:2
   │
47 │ });
   │  ^ unexpected

error[SyntaxError]: expected a function body, or an expression but instead found 'do'
   ┌─ do.js:49:7
   │
49 │ () => do {
   │       ^^ Expected a function body, or an expression here

error[SyntaxError]: expected `WHILE_KW` but instead found `;`
   ┌─ do.js:54:2
   │
54 │ };
   │  ^ unexpected


```


